fix: navbar responsiveness on tablet size (#7)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
     @apply text-primary-100 dark:text-accent;
   }
   .container {
-    @apply sm:max-w-5xl max-w-full mx-auto flex flex-col min-h-screen gap-4 px-4 sm:px-0;
+    @apply sm:max-w-5xl max-w-full mx-auto flex flex-col min-h-screen gap-4 px-4 lg:px-0;
   }
   .theme-switcher {
     @apply rounded-full dark:bg-yellow-300 bg-fuchsia-900 h-8 w-8 grid place-items-center;
